--- a/view/frontend/templates/customer/providers.phtml
+++ b/view/frontend/templates/customer/providers.phtml
@@ -10,15 +10,21 @@
 /** @var \Magetarian\CustomerTwoFactorAuth\ViewModel\Customer\LoginProviders $viewModel */
 $viewModel = $block->getViewModel();
 ?>
-<div class="field password required">
-  Providers
-</div>
+<fieldset id="two-factor-auth-provider-list" class="fieldset providers-list"></fieldset>
 <script type="text/x-magento-init">
     {
-        ".form-login": {
+        "#login-form": {
             "twoFactorAuthProviders": {
-                "formSelector": "form.form-create-account"
             }
         }
     }
+</script>
+<script id="provider-list-template" type="text/x-magento-template">
+    <div class="field provider-selection provider-<%- data.code %> required">
+        <div class="primary">
+            <button type="button" class="action login primary" data-code="<%- data.code %>" name="login-<%- data.code %>" id="login-using-<%- data.code %>">
+                <span><?= $block->escapeHtmlAttr(__('Sign In Using ')) ?><%- data.name %></span>
+            </button>
+        </div>
+    </div>
 </script>
