--- a/view/frontend/templates/customer/providers.phtml
+++ b/view/frontend/templates/customer/providers.phtml
@@ -10,7 +10,7 @@
 /** @var \Magetarian\CustomerTwoFactorAuth\ViewModel\Customer\LoginProviders $viewModel */
 $viewModel = $block->getViewModel();
 ?>
-<fieldset id="two-factor-auth-provider-list" class="fieldset providers-list"></fieldset>
+<fieldset id="two-factor-auth-provider-list" class="fieldset providers-list" style="display: none;"></fieldset>
 <script type="text/x-magento-init">
     {
         "#login-form": {
