--- a/view/frontend/layout/customer_account_login.xml
+++ b/view/frontend/layout/customer_account_login.xml
@@ -8,12 +8,8 @@
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="form.additional.info">
-            <block name="two-factor-authentication"
-                   template="Magetarian_CustomerTwoFactorAuth::customer/providers.phtml" >
-                <!--                <arguments>-->
-                <!--                    <argument name="view_model" xsi:type="object">Magetarian\CustomerTwoFactorAuth\ViewModel\Customer\Configuration</argument>-->
-                <!--                </arguments>-->
-            </block>
+            <block name="two-factor-authentication" template="Magetarian_CustomerTwoFactorAuth::customer/providers.phtml"/>
+
         </referenceContainer>
     </body>
 </page>
