--- a/view/frontend/templates/duo/auth.phtml
+++ b/view/frontend/templates/duo/auth.phtml
@@ -11,11 +11,7 @@
 $viewModel = $block->getViewModel();
 ?>
 <div class="field twofactorauth-duo duo-auth">
-    <iframe id="duo_iframe"
-            data-post-action="<?=$block->escapeHtmlAttr($block->getUrl('customer/account/loginPost'))?>"
-            data-post-argument="tfa_code"
-            data-bind="afterRender: onAfterRender">
-    </iframe>
+    <iframe id="duo_iframe"></iframe>
     <input name="provider_code" value="<?=$viewModel->getProviderCode();?>" id="provider_code" type="hidden" />
     <button type="submit" name="twofactorauth-login" id="twofactorauth-duo" />
     <script type="text/x-magento-init">
