--- a/view/frontend/templates/customer_account/two_factor_auth_config.phtml
+++ b/view/frontend/templates/customer_account/two_factor_auth_config.phtml
@@ -27,7 +27,7 @@ $providerAttribute = $viewModel->getProviderConfigAttribute();
                         <?php $selected = $viewModel->getSelectedProviders(); ?>
                         <select name="providers[]" size="4"  multiple="multiple" id="providers-field" class="multiselect">
                             <option value="" <?= (count($selected) == 0 ? 'selected' : '') ?>><?= $block->escapeHtml(__('None')) ?></option>
-                            <?php foreach ($viewModel->getAvailableProviders() as $providerCode => $providerName): ?>
+                            <?php foreach ($viewModel->getEnabledProviders() as $providerCode => $providerName): ?>
                                 <option value="<?=$block->escapeHtmlAttr($providerCode);?>"
                                     <?=(in_array($providerCode, $selected) ? 'selected' : '') ?>>
                                     <?= $block->escapeHtml($providerName) ?>
