--- a/view/frontend/layout/customer_account.xml
+++ b/view/frontend/layout/customer_account.xml
@@ -13,7 +13,7 @@
                    ifconfig="msp_securitysuite_twofactorauth/general/enabled_customer">
                 <arguments>
                     <argument name="path" xsi:type="string">twofactorauth/customer/configuration</argument>
-                    <argument name="label" xsi:type="string" translate="true">2FA Configuration</argument>
+                    <argument name="label" xsi:type="string" translate="true">TFA</argument>
                     <argument name="sortOrder" xsi:type="number">150</argument>
                 </arguments>
             </block>
