--- a/view/frontend/layout/twofactorauth_customer_configuration.xml
+++ b/view/frontend/layout/twofactorauth_customer_configuration.xml
@@ -9,11 +9,17 @@
     <update handle="customer_account"/>
     <body>
         <referenceContainer name="content">
-            <block name="two.factor.auth.config"
-                   template="Magetarian_CustomerTwoFactorAuth::customer_account/two_factor_auth_config.phtml" cacheable="false">
+            <block name="two.factor.auth.config" template="Magetarian_CustomerTwoFactorAuth::customer_account/two_factor_auth_config.phtml" cacheable="false">
                 <arguments>
                     <argument name="view_model" xsi:type="object">Magetarian\CustomerTwoFactorAuth\ViewModel\Customer\Configuration</argument>
                 </arguments>
+                <container name="customer.tfa.additional.info" as="tfa_additional_info" label="TFA Additional Info" htmlTag="div" htmlClass="tfa-additional-info">
+                    <block name="two.factor.auth.google" template="Magetarian_CustomerTwoFactorAuth::google/customer_config.phtml">
+                        <arguments>
+                            <argument name="view_model" xsi:type="object">Magetarian\CustomerTwoFactorAuth\ViewModel\Google\Customer</argument>
+                        </arguments>
+                    </block>
+                </container>
             </block>
         </referenceContainer>
     </body>
