--- a/view/frontend/web/template/tfa-login.html
+++ b/view/frontend/web/template/tfa-login.html
@@ -3,7 +3,7 @@
   ~ @copyright  2020  Sashas IT Support Inc. (http://www.extensions.sashas.org)
   ~ @license     http://opensource.org/licenses/GPL-3.0  GNU General Public License, version 3 (GPL-3.0)
   -->
-<fieldset id="checkout-tfa-provider-list" data-bind="visible: isVisible()" class="fieldset providers-list">
+<fieldset id="tfa-provider-list" data-bind="visible: isVisible()" class="fieldset providers-list">
     <each args="data: getRegion('provider'), as: 'provider'" render=""/>
 </fieldset>
 
