--- a/view/frontend/layout/customer_account_login.xml
+++ b/view/frontend/layout/customer_account_login.xml
@@ -8,7 +8,17 @@
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="form.additional.info">
-            <block name="two-factor-authentication" template="Magetarian_CustomerTwoFactorAuth::customer/providers.phtml" />
+            <block name="two-factor-authentication" template="Magetarian_CustomerTwoFactorAuth::customer/providers.phtml">
+                <arguments>
+                    <argument name="jsLayout" xsi:type="array">
+                        <item name="components" xsi:type="array">
+                            <item name="tfa-login" xsi:type="array">
+                                <item name="component" xsi:type="string">Magetarian_CustomerTwoFactorAuth/js/view/customer-login-tfa</item>
+                            </item>
+                        </item>
+                    </argument>
+                </arguments>
+            </block>
         </referenceContainer>
     </body>
 </page>
