--- a/view/frontend/layout/customer_account.xml
+++ b/view/frontend/layout/customer_account.xml
@@ -9,10 +9,9 @@
     <body>
         <referenceBlock name="customer_account_navigation">
             <block class="Magento\Customer\Block\Account\SortLinkInterface"
-                   name="customer-account-navigation-two-factor-auth-link"
-                   ifconfig="msp_securitysuite_twofactorauth/general/enabled_customer">
+                   name="customer-account-navigation-tfa-link">
                 <arguments>
-                    <argument name="path" xsi:type="string">twofactorauth/customer/configuration</argument>
+                    <argument name="path" xsi:type="string">tfa/customer/configuration</argument>
                     <argument name="label" xsi:type="string" translate="true">TFA</argument>
                     <argument name="sortOrder" xsi:type="number">150</argument>
                 </arguments>
