--- a/view/frontend/web/template/provider/google.html
+++ b/view/frontend/web/template/provider/google.html
@@ -36,7 +36,7 @@
     </div>
 </div>
 <div class="primary" data-bind="visible: isActive()">
-    <button type="submit" class="action primary" name="twofactorauth-login" id="twofactorauth-google">
+    <button type="submit" class="action primary" name="tfa-login" id="tfa-google">
         <span data-bind="i18n: 'Confirm'"></span>
     </button>
 </div>
