--- a/view/frontend/layout/customer_account.xml
+++ b/view/frontend/layout/customer_account.xml
@@ -8,8 +8,7 @@
       xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceBlock name="customer_account_navigation">
-            <block class="Magento\Customer\Block\Account\SortLinkInterface"
-                   name="customer-account-navigation-tfa-link">
+            <block class="Magento\Customer\Block\Account\SortLinkInterface" name="customer-account-navigation-tfa-link">
                 <arguments>
                     <argument name="path" xsi:type="string">tfa/customer/configuration</argument>
                     <argument name="label" xsi:type="string" translate="true">TFA</argument>
