--- a/view/frontend/templates/customer_account/tfa_config.phtml
+++ b/view/frontend/templates/customer_account/tfa_config.phtml
@@ -27,10 +27,11 @@ $providerAttribute = $viewModel->getProviderConfigAttribute();
                         <?php $selected = $viewModel->getSelectedProviders(); ?>
                         <select name="providers[]" size="4"  multiple="multiple" id="providers-field" class="multiselect">
                             <option value="" <?= (count($selected) == 0 ? 'selected' : '') ?>><?= $block->escapeHtml(__('None')) ?></option>
-                            <?php foreach ($viewModel->getEnabledProviders() as $providerCode => $providerName): ?>
-                                <option value="<?=$block->escapeHtmlAttr($providerCode);?>"
-                                    <?=(in_array($providerCode, $selected) ? 'selected' : '') ?>>
-                                    <?= $block->escapeHtml($providerName) ?>
+                            <?php  /** @var \Magetarian\CustomerTwoFactorAuth\Api\ProviderInterface $provider */ ?>
+                            <?php foreach ($viewModel->getEnabledProviders() as $provider): ?>
+                                <option value="<?=$block->escapeHtmlAttr($provider->getCode());?>"
+                                    <?=(in_array($provider->getCode(), $selected) ? 'selected' : '') ?>>
+                                    <?= $block->escapeHtml($provider->getName()) ?>
                                 </option>
                             <?php endforeach; ?>
                         </select>
