--- a/view/frontend/templates/customer_account/tfa_config.phtml
+++ b/view/frontend/templates/customer_account/tfa_config.phtml
@@ -25,8 +25,11 @@ $providerAttribute = $viewModel->getProviderConfigAttribute();
                     <?= $block->getBlockHtml('formkey') ?>
                     <div class="box-content">
                         <?php $selected = $viewModel->getSelectedProviders(); ?>
-                        <select name="providers[]" size="4"  multiple="multiple" id="providers-field" class="multiselect">
-                            <option value="" <?= (count($selected) == 0 ? 'selected' : '') ?>><?= $block->escapeHtml(__('None')) ?></option>
+                        <select name="providers[]" size="4"  multiple="multiple" id="providers-field"
+                                class="multiselect">
+                            <option value="" <?= (count($selected) == 0 ? 'selected' : '') ?>>
+                                <?= $block->escapeHtml(__('None')) ?>
+                            </option>
                             <?php  /** @var \Magetarian\CustomerTwoFactorAuth\Api\ProviderInterface $provider */ ?>
                             <?php foreach ($viewModel->getEnabledProviders() as $provider): ?>
                                 <option value="<?=$block->escapeHtmlAttr($provider->getCode());?>"
