--- a/view/frontend/templates/google/customer_config.phtml
+++ b/view/frontend/templates/google/customer_config.phtml
@@ -6,6 +6,7 @@
  */
 ?>
 <?php
+// phpcs:ignoreFile
 /** @var \Magento\Framework\View\Element\Template $block */
 /** @var \Magetarian\CustomerTwoFactorAuth\ViewModel\Customer\Google $viewModel */
 $viewModel = $block->getViewModel();
@@ -19,7 +20,11 @@ $viewModel = $block->getViewModel();
             <div class="box box-settings">
                 <div class="box-content">
                     <img class="msp-tfa-google-qr" src="<?=$block->escapeHtmlAttr($block->getUrl('tfa/google/qr')) ?>"/>
-                    <p><textarea class="msp-tfa-google-secure-code"><?= $block->escapeHtml($viewModel->getSecretCode()) ?></textarea></p>
+                    <p>
+                        <textarea class="msp-tfa-google-secure-code">
+                            <?= $block->escapeHtml($viewModel->getSecretCode()) ?>
+                        </textarea>
+                    </p>
                     <p><?= $block->escapeHtml(__('Scan or copy&amp;paste this code with your authenticator app and insert your code to confirm.')) ?></p>
                 </div>
                 <form
