--- a/view/frontend/layout/customer_account_login.xml
+++ b/view/frontend/layout/customer_account_login.xml
@@ -14,6 +14,12 @@
                         <item name="components" xsi:type="array">
                             <item name="tfa-login" xsi:type="array">
                                 <item name="component" xsi:type="string">Magetarian_CustomerTwoFactorAuth/js/view/customer-login-tfa</item>
+                                <item name="children" xsi:type="array">
+                                    <item name="messages" xsi:type="array">
+                                        <item name="component" xsi:type="string">Magento_Ui/js/view/messages</item>
+                                        <item name="displayArea" xsi:type="string">messages</item>
+                                    </item>
+                                </item>
                             </item>
                         </item>
                     </argument>
