--- a/view/frontend/web/template/provider/authy.html
+++ b/view/frontend/web/template/provider/authy.html
@@ -10,8 +10,8 @@
         </button>
     </div>
 </div>
-<!-- ko ifnot: (isConfigured())-->
 <div class="tfa-auth authy-configure" data-bind="visible: isActive()">
+    <!-- ko ifnot: (isConfigured())-->
     <fieldset class="register fieldset" visible='currentStep() === "register"'>
         <p data-bind='i18n: "Please register yourself to Authy."'></p>
         <div class="field field-tfa-phone-prefix">
@@ -37,6 +37,7 @@
                     id="tfa_authy_phone"
                     class="input-text required-entry validate-greater-than-zero"
                     type="text"
+                    autocomplete="off"
                     data-validate="{required:true}"
                     autofocus
                     placeholder="Phone number"/>
@@ -62,27 +63,68 @@
             </button>
         </div>
     </fieldset>
+    <!-- /ko -->
+    <!-- ko if: (isConfigured())-->
+    <fieldset class="authentication fieldset" visible='currentStep() === "authentication"'>
+        <p data-bind='i18n: "Verification methods:"'></p>
+        <div class="field field-tfa-onetouch">
+            <button
+                click="AuthClick.bind($data, $element, 'onetouch')"
+                type="button"
+                class="action primary">
+                <span data-bind='i18n: "Use one touch"'></span>
+            </button>
+        </div>
+        <div class="field field-tfa-token">
+            <button
+                click="AuthClick.bind($data, $element, 'token')"
+                type="button"
+                class="action primary">
+                <span data-bind='i18n: "Use authy token"'></span>
+            </button>
+        </div>
+        <p data-bind='i18n: "Emergency methods:"'></p>
+        <div class="field field-tfa-sms">
+            <button
+                click="AuthClick.bind($data, $element, 'sms')"
+                type="button"
+                class="action default">
+                <span data-bind='i18n: "Send me a code via SMS"'></span>
+            </button>
+        </div>
+        <div class="field field-tfa-call">
+            <button
+                click="AuthClick.bind($data, $element, 'call')"
+                type="button"
+                class="action default">
+                <span data-bind='i18n: "Send me a code via phone call"'></span>
+            </button>
+        </div>
+    </fieldset>
+    <!-- /ko -->
     <fieldset  class="verify fieldset" visible='currentStep() === "verify"'>
+        <p data-bind='i18n: "Expires in " + secondsToExpire()+ " seconds."' visible='secondsToExpire() > 0'></p>
         <div class="field field-tfa-verify">
-            <label for="tfa_authy_verify" class="label">
+            <label for="tfa_code" class="label">
                 <span data-bind='i18n: "Verification code"'></span>
             </label>
             <div class="control">
                 <input
-                    data-bind="value: verifyCode, mageInit: {'mage/trim-input':{}}"
-                    id="tfa_authy_verify"
+                    data-bind="mageInit: {'mage/trim-input':{}}"
+                    id="tfa_code"
+                    name="tfa_code"
                     class="input-text required-entry"
                     type="text"
                     autofocus
+                    autocomplete="off"
                     placeholder="Verification code"/>
             </div>
         </div>
+        <div class="primary">
+            <button type="submit" class="action primary" name="tfa-login" id="tfa-authy">
+                <span data-bind="i18n: 'Confirm'"></span>
+            </button>
+        </div>
     </fieldset>
-</div>
-<!-- /ko -->
-
-<div class="primary" data-bind='visible: isActive() && currentStep() === "authentication"'>
-    <button type="submit" class="action primary" name="tfa-login" id="tfa-google">
-        <span data-bind="i18n: 'Confirm'"></span>
-    </button>
+    <input name="provider_code" data-bind="value: getCode()" id="provider_code" type="hidden" />
 </div>
