--- a/view/frontend/layout/tfa_customer_configuration.xml
+++ b/view/frontend/layout/tfa_customer_configuration.xml
@@ -17,13 +17,13 @@
                     <block name="two.factor.auth.google" template="Magetarian_CustomerTwoFactorAuth::google/customer_config.phtml">
                         <arguments>
                             <argument name="view_model" xsi:type="object">Magetarian\CustomerTwoFactorAuth\ViewModel\Customer\Information</argument>
-                            <argument name="provider_code" xsi:type="const">\MSP\TwoFactorAuth\Model\Provider\Engine\Google::CODE</argument>
+                            <argument name="provider_code" xsi:type="const">\Magento\TwoFactorAuth\Model\Provider\Engine\Google::CODE</argument>
                         </arguments>
                     </block>
                     <block name="two.factor.auth.authy" template="Magetarian_CustomerTwoFactorAuth::authy/customer_config.phtml">
                         <arguments>
                             <argument name="view_model" xsi:type="object">Magetarian\CustomerTwoFactorAuth\ViewModel\Customer\Information</argument>
-                            <argument name="provider_code" xsi:type="const">\MSP\TwoFactorAuth\Model\Provider\Engine\Authy::CODE</argument>
+                            <argument name="provider_code" xsi:type="const">\Magento\TwoFactorAuth\Model\Provider\Engine\Authy::CODE</argument>
                         </arguments>
                     </block>
                 </container>
