Modified attribute. Added ability to edit providers at the admin. Minor fixes

--- a/view/frontend/templates/google/customer_config.phtml
+++ b/view/frontend/templates/google/customer_config.phtml
@@ -26,7 +26,7 @@ $providerCode = $block->getProviderCode();
 
                         <textarea readonly="true" class="msp-tfa-google-secure-code"><?= $block->escapeHtml($additionalConfig['secretCode']) ?></textarea>
                     </p>
-                    <p><?= $block->escapeHtml(__('Scan or copy&amp;paste this code with your authenticator app and insert your code to confirm.')) ?></p>
+                    <p><?= $block->escapeHtml(__('Scan or copy&amp;paste this code with your authenticator app and insert your code to confirm when you login.')) ?></p>
                 </div>
                 <form
                     class="form"
